refactor and add word show
