# src/Controller/API/Word/WordController.php
@@ -4,6 +4,7 @@ namespace App\Controller\API\Word;
 
 use App\Controller\API\AbstractAuthenticationBaseController;
 use App\Service\Word\WordCreateService;
+use App\Service\Word\WordShowService;
 use Symfony\Component\Routing\Annotation\Route;
 
 class WordController extends AbstractAuthenticationBaseController
@@ -19,6 +20,25 @@ class WordController extends AbstractAuthenticationBaseController
     {
         $wordCreateService->setDictionaryId($dictionaryId);
         $responseModel = $wordCreateService->getResponseModel();
+
+        return $this->json(
+            $responseModel->getResponse(),
+            $responseModel->getStatusCode()
+        );
+    }
+
+    /**
+     * @Route(
+     *     name="word_show",
+     *     path="/dictionary/{dictionaryId}/word/{wordId}",
+     *     methods={"GET"}
+     *     )
+     */
+    public function show($dictionaryId, $wordId, WordShowService $wordShowService)
+    {
+        $wordShowService->setDictionaryId($dictionaryId);
+        $wordShowService->setWordId($wordId);
+        $responseModel = $wordShowService->getResponseModel();
 
         return $this->json(
             $responseModel->getResponse(),
